corrections after elena's review

--- a/src/markdown/blog/5-minuten-startup-GV-in-der-schweiz.mdx
+++ b/src/markdown/blog/5-minuten-startup-GV-in-der-schweiz.mdx
@@ -14,10 +14,13 @@ hier ist was wir gelernt haben, sowie unsere Templates, die wir zur Verfügung s
 1. Bei early stage startups dauert es ca. 5min!
 2. **20 Tage** im Voraus ist die Deadline um die Einladung an die Aktionäre zu verschicken. Das kann per Email getan werden, sofern in den Statuten so festgelegt.
 3. Bevor man die Einladung schickt, muss man den Jahresabschluss fertig haben.
-4. Eine Einladung an die Aktionäre enthält:
-    * [Die Traktanden](https://docs.google.com/document/d/1KKhzYvQEJ-u8n5OIoszwzrrG5QuHQ58I/), inklusive Anträge des Verwaltungrates.
+4. [Eine Einladung](https://docs.google.com/document/d/1KKhzYvQEJ-u8n5OIoszwzrrG5QuHQ58I/) an die Aktionäre enthält:
+    * Die Traktanden, inklusive Anträge des Verwaltungrates.
     * Den Jahresabschluss
     * [Die Vollmacht](https://docs.google.com/document/d/1iP5t4g2Hb848_iXQfW-3vjXNS0rzc99B/) für die Aktionäre, die an der GV nicht teilnehmen können.
+5. Gut zu wissen: Die Aktionäre müssen nicht zwingend die Vollmacht zurückschicken. Es gibt keine mindestanzahl von Aktionäre die bei der GV present sein müssen.
+6. [Das Protokoll](https://docs.google.com/document/d/1LKdj7ks8myvbhk8YSJ1Wn_UDbDvPgmNSoBNr9oF2mKI/edit#) ist im voraus schon geschrieben und wird bei der GV vorgelesen. Nachdem es zu jedem Traktand kurz formell abgestimmt wurde, wird das Protokoll noch vom Verwaltungsratspräsident unterschrieben.
+
 
 Falls du Fragen hast, melde dich jederzeit bei **contact@ledgy.com**.
 <br/>
