--- a/src/markdown/blog/5-minuten-startup-GV-in-der-schweiz.mdx
+++ b/src/markdown/blog/5-minuten-startup-GV-in-der-schweiz.mdx
@@ -18,8 +18,8 @@ hier ist was wir gelernt haben, sowie unsere Templates, die wir zur Verfügung s
     * Die Traktanden, inklusive Anträge des Verwaltungrates.
     * Den Jahresabschluss
     * [Die Vollmacht](https://docs.google.com/document/d/1iP5t4g2Hb848_iXQfW-3vjXNS0rzc99B/) für die Aktionäre, die an der GV nicht teilnehmen können.
-5. Gut zu wissen: Die Aktionäre müssen nicht zwingend die Vollmacht zurückschicken. Es gibt keine mindestanzahl von Aktionäre die bei der GV present sein müssen.
-6. [Das Protokoll](https://docs.google.com/document/d/1LKdj7ks8myvbhk8YSJ1Wn_UDbDvPgmNSoBNr9oF2mKI/edit#) ist im voraus schon geschrieben und wird bei der GV vorgelesen. Nachdem es zu jedem Traktand kurz formell abgestimmt wurde, wird das Protokoll noch vom Verwaltungsratspräsident unterschrieben.
+5. Gut zu wissen: Die Aktionäre müssen nicht zwingend die Vollmacht zurückschicken. Es gibt keine mindestanzahl von Aktionäre die bei der GV präsent sein müssen.
+6. [Das Protokoll](https://docs.google.com/document/d/1LKdj7ks8myvbhk8YSJ1Wn_UDbDvPgmNSoBNr9oF2mKI/edit#) ist im voraus schon geschrieben und wird bei der GV vorgelesen. Nachdem zu jedem Traktand kurz formell abgestimmt wurde, wird das Protokoll noch vom Verwaltungsratspräsident unterschrieben.
 
 
 Falls du Fragen hast, melde dich jederzeit bei **contact@ledgy.com**.
