--- a/src/locale/en/messages.po
+++ b/src/locale/en/messages.po
@@ -489,8 +489,8 @@ msgstr "Equity data is too important to be accidentally tweaked in a spreadsheet
 
 #: src/pages/index.jsx:20
 #: src/pages/index.jsx:27
-msgid "Equity management for startups"
-msgstr "Equity management for startups"
+msgid "Round Modeling. Made Simple."
+msgstr "Round Modeling. Made Simple."
 
 #: src/pages/pricing.jsx:30
 msgid "Equity plan management"
