--- a/src/locale/de/messages.po
+++ b/src/locale/de/messages.po
@@ -6,7 +6,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "POT-Creation-Date: 2018-09-12T18:40:54.619Z\n"
-"PO-Revision-Date: 2019-07-08 15:44+0200\n"
+"PO-Revision-Date: 2019-07-08 16:44+0200\n"
 "Language: de\n"
 "Report-Msgid-Bugs-To: \n"
 "Last-Translator: Timo Horstschäfer <timo@ledgy.com>\n"
@@ -520,7 +520,7 @@ msgstr "Funktionen"
 
 #: src/pages/features.jsx:70
 msgid "Featuring unlimited share classes, treasury shares, pooled investments, and automatic share numbering"
-msgstr "Mit beliebig vielen Anteilsklassen, Treasury Anteilen, gepoolten Investitionen und automatischer Aktiennummerierung<<<<<<< HEAD"
+msgstr "Mit beliebig vielen Anteilsklassen, Treasury Anteilen, gepoolten Investitionen und automatischer Aktiennummerierung"
 
 #: src/pages/index.jsx:173
 msgid "Finally, I have a reliable overview of all our shares, employee grants, and their legal documents. So much better than the Excel I used before."
@@ -801,7 +801,7 @@ msgid "Lost track of who owns how many shares in your startup? Let Ledgy deal wi
 msgstr "Hast du die Übersicht verloren, wem wie viele Aktien in deinem Startup gehören? Lass Ledgy sich darum kümmern."
 
 #: src/layouts/team.jsx:113
-msgid "Luna is a model of the Saturn V rocket, which has been to space 13 times, and holds the record for largest payload to low Earth orbit. She‘s still under construction - <0>Ready to help?</0>"
+msgid "Luna is a model of the Saturn V rocket, which has been to space 13 times, and holds the record for largest payload to low Earth orbit. She’s still under construction - <0>Ready to help?</0>"
 msgstr "Luna ist ein Modell der Rakete Saturn V, welche 13 mal im Weltraum war und den Rekord für die höchste Nutzlast in die untere Erdumlaufbahn hält. Sie ist noch im Aufbau - <0>Willst du helfen?</0>"
 
 #: src/pages/about-us.jsx:192
@@ -1199,7 +1199,7 @@ msgstr "Nutzungsbedingungen"
 
 #: src/pages/blog.jsx:70
 msgid "The Ledgy Blog"
-msgstr "Der Ledgy-Blog<<<<<<< HEAD"
+msgstr "Der Ledgy-Blog"
 
 #: src/layouts/index.jsx:385
 #: src/pages/index.jsx:16
