--- a/src/markdown/blog/5-minuten-startup-GV-in-der-schweiz.mdx
+++ b/src/markdown/blog/5-minuten-startup-GV-in-der-schweiz.mdx
@@ -25,4 +25,9 @@ hier ist was wir gelernt haben, sowie unsere Templates, die wir zur Verfügung s
 Falls du Fragen hast, melde dich jederzeit bei **contact@ledgy.com**.
 <br/>
 
+##### Ressourcen
+* [Einladung an die Aktionäre](https://docs.google.com/document/d/1KKhzYvQEJ-u8n5OIoszwzrrG5QuHQ58I/)
+* [Vollmacht](https://docs.google.com/document/d/1iP5t4g2Hb848_iXQfW-3vjXNS0rzc99B/)
+* [GV Protokoll](https://docs.google.com/document/d/1LKdj7ks8myvbhk8YSJ1Wn_UDbDvPgmNSoBNr9oF2mKI/edit#)
+
 _***Danke*** an Elena Walder-Schiavone von [smartuplaw](https://www.smartuplaw.ch), die diesen Blogpost rechtlich geprüft hat._
