--- a/src/markdown/blog/5-minuten-startup-GV-in-der-schweiz.mdx
+++ b/src/markdown/blog/5-minuten-startup-GV-in-der-schweiz.mdx
@@ -7,7 +7,7 @@ description: "Wir haben letzte Woche die allererste Generalversammlung bei Ledgy
 coverImage: 5-minuten-startup-GV-in-der-schweiz/GV-cover.jpg
 ---
 
-Wir haben letzte Woche die allererste Generalversammlung bei Ledgy durchgeführt,
+Wir haben vor ein Paar Wochen die allererste Generalversammlung bei Ledgy durchgeführt,
 hier ist was wir gelernt haben, sowie unsere Templates, die wir zur Verfügung stellen:
 
 
@@ -21,13 +21,13 @@ hier ist was wir gelernt haben, sowie unsere Templates, die wir zur Verfügung s
 5. Gut zu wissen: Die Aktionäre müssen nicht zwingend die Vollmacht zurückschicken. Es gibt keine Mindestanzahl von Aktionäre, die bei der GV anwesend sein müssen.
 6. Nachdem zu jedem Traktandum kurz formell abgestimmt wurde, wird [das Protokoll](https://docs.google.com/document/d/1LKdj7ks8myvbhk8YSJ1Wn_UDbDvPgmNSoBNr9oF2mKI/edit#) noch vom Verwaltungsratspräsidenten (und allenfalls dem Protokollführer) unterschrieben.
 
-
 Falls du Fragen hast, melde dich jederzeit bei **contact@ledgy.com**.
-<br/>
 
 ##### Ressourcen
 * [Einladung an die Aktionäre](https://docs.google.com/document/d/1KKhzYvQEJ-u8n5OIoszwzrrG5QuHQ58I/)
 * [Vollmacht](https://docs.google.com/document/d/1iP5t4g2Hb848_iXQfW-3vjXNS0rzc99B/)
 * [GV Protokoll](https://docs.google.com/document/d/1LKdj7ks8myvbhk8YSJ1Wn_UDbDvPgmNSoBNr9oF2mKI/edit#)
+<br/>
+
 
 _***Danke*** an Elena Walder-Schiavone von [smartuplaw](https://www.smartuplaw.ch), die diesen Blogpost rechtlich geprüft hat._
