--- a/src/markdown/blog/pre-and-post-money-option-pools.mdx
+++ b/src/markdown/blog/pre-and-post-money-option-pools.mdx
@@ -72,9 +72,9 @@ $$
 \Longrightarrow
 \frac{\text{PreMoneyValuation}}{\text{(Sheryl + Elon)’ shares} + \textbf{PoolShares}}
 $$
-This again means, that if Peter gets a cheaper price per share, then he will get more shares for her $500,000 investment. An important detail to be noticed here: **The number of Peter’s** shares depends on the number of shares in the option pool!
+This again means, that if Peter gets a cheaper price per share, then he will get more shares for his $500,000 investment. An important detail to be noticed here: **The number of Peter’s** shares depends on the number of shares in the option pool!
 
-By now, you should see that we have a “problem”: The number of shares in the option pool depends on the number of Peter’s shares because it has to represent exactly 10% of the total shares after the capital increase. On the other hand, the number of Peter’s shares also depends on the number of shares in the option pool because her stake also needs to be exactly 9.09% as agreed during the deal. This is why we need to solve this numerically which is what Ledgy’s round modeling does.
+By now, you should see that we have a “problem”: The number of shares in the option pool depends on the number of Peter’s shares because it has to represent exactly 10% of the total shares after the capital increase. On the other hand, the number of Peter’s shares also depends on the number of shares in the option pool because his stake also needs to be exactly 9.09% as agreed during the deal. This is why we need to solve this numerically which is what Ledgy’s round modeling does.
 
 #### Still wondering if you should go for a pre- or post-money option pool?
 
