--- a/src/locale/de/messages.po
+++ b/src/locale/de/messages.po
@@ -1085,7 +1085,7 @@ msgstr "Durch die Importtools kannst du innert kürzester Zeit loslegen"
 
 #: src/layouts/team.jsx:113
 msgid "Spela found her passion for business development through her experiences co-founding a startup, and as an early employee at a SaaS company. She holds a Waldorf teaching diploma, and a Master’s degree in Pharmacy."
-msgstr "Spela entdeckte ihre Begeisterung für Business Development durch ihre Erfahrungen als Co-Founder eines Startups und später als Mitarbeiterin in einem SaaS-Unternehmen. Sie hat ein Waldorflehrerdiplom und einen Master-Abschluss in Pharmazie."
+msgstr "Spela entdeckte ihre Begeisterung für Business Development durch ihre Erfahrungen bei der Gründung eines Start-ups, und später als eine der ersten Mitarbeiterin eines SaaS-Unternehmens. Sie hat ein Lehrdiplom der Waldorf-Schule und einen Master in Pharmazie."
 
 #: src/pages/features/captable.jsx:59
 #: src/pages/features/captable.jsx:157
