Add formula pictures and text changes

--- a/src/markdown/blog/anti-dilution-provisions.mdx
+++ b/src/markdown/blog/anti-dilution-provisions.mdx
@@ -34,7 +34,7 @@ But in the event that the company raises additional funds at a lower valuation t
 Here’s an example of why investors want protection in the term sheet:
 
 
->*If you close a series A round of 1M€ at a pre-money valuation of 7M€, the post-money valuation will be 8M€. Now the investor owns 12,5% (1M/8M) of the company shares.If you raise a second round of 3M€ but can only get pre-money valuation of 6M€, the first investor basically lost 25% of the original investment (8M - 6M = 2M, 2M / 8M => 25%).*
+>*If you close a series A round of 1M€ at a pre-money valuation of 7M€, the post-money valuation will be 8M€. Now the investor owns 12,5% (1M/8M) of the company shares. If you raise a second round of 3M€ but can only get pre-money valuation of 6M€, the first investor essentially lost 25% of the original investment (8M - 6M = 2M, 2M / 8M => 25%).*
 
 
 Another and often times more important reason why dilution matters to investors, is in the **voting power and control of the company**. In most cases, control and voting power are tied to the amount and type of shares held by a given shareholder. Investors and even founders can find themselves outnumbered if their ownership in the company is diluted.
@@ -55,8 +55,6 @@ Even though many investors seek down-round protection, full ratchet isn’t very
 
 ###### WEIGHTED AVERAGE
 
-<br/>
-<br/>
 
 The next type is a little different. It’s not meant to recuperate all of early investors losses but rather act as **compensation**. There are two ways of calculating it and are called **“broad-based weighted average”** and **”narrow-based weighted average”**.
 
@@ -67,7 +65,7 @@ We are trying to calculate the new price per share that will compensate series A
 **EXAMPLE:**
 
 
->*Let’s assume a company has 1,000,000 common shares outstanding and in series A issues 1,000,000 shares of preferred stock for the price of 2€ per share. The series A preferred stock is convertible to common at a 1:1 ratio and for a conversion price of 2€. Then in series B they issue another 1,000,000 shares at only 1€ per share.*
+>*Let’s assume a company has 1,000,000 common shares outstanding and in their series A round, the company issues 1,000,000 shares of preferred stock for the price of 2€ per share. The series A preferred stock is convertible to common at a 1:1 ratio and for a conversion price of 2€. Then in series B they issue another 1,000,000 shares at only 1€ per share.*
 >*Now comes the time to calculate the new conversion price to compensate series A investor.*
 <Img src="Formula1.png" />
 
@@ -75,7 +73,7 @@ We are trying to calculate the new price per share that will compensate series A
 
 
 
->*The next step to get the actual amount of common issuable, the previous investor will end up with, we have to multiply the number of shares they have from their round with the conversion rate caused by the down-round. The Conversion rate is calculated by dividing the old conversion price with the new conversion price.*
+>*The next step to get the actual amount of common issuable stock that the previous investor will end up with, we have to multiply the number of shares they have from their round with the conversion rate caused by the down-round. The Conversion rate is calculated by dividing the old conversion price with the new conversion price.*
 <Img src="Formula2.png" size="300" />
 
 
@@ -89,7 +87,7 @@ We are trying to calculate the new price per share that will compensate series A
 
 ##### 3. NO ANTI-DILUTION PROTECTION
 
-The last possible scenario when negotiating anti-dilution provisions with your investors is one where you don’t put any anti-dilution clauses in the contract at all. This is also known as no price based anti-dilution. It means that the investor’s stock is treated the same as common shareholders stock and it undergoes the same rate of dilution in the event of a down-round. From the founders and other common shareholders perspective, this is **the fairest and best option**.
+The last possible scenario when negotiating anti-dilution provisions with your investors is one where you don’t put any anti-dilution clauses in the contract at all. This is also known as no-price-based anti-dilution. It means that the investor’s stock is treated the same as common shareholders stock and it undergoes the same rate of dilution in the event of a down-round. From the founders and other common shareholders perspective, this is **the fairest and best option**.
 
 ##### 4. BROAD-BASED VS NARROW-BASED FORMULA (and which one is better for founders)
 
