Change cover image, title style

--- a/src/markdown/blog/anti-dilution-provisions.mdx
+++ b/src/markdown/blog/anti-dilution-provisions.mdx
@@ -1,7 +1,7 @@
 ---
 date: "2019-07-11"
 author: "spela"
-title: "ANTI-DILUTION PROVISIONS | Which one is better for founders?"
+title: "Anti-Dilution Provisions | Which One Is Better for Founders?"
 description: "During any investment, VCs and angel investors usually demand “special treatment”, reserved just for them."
 coverImage: anti-dilution-provisions/coverImg.jpg
 images:
@@ -15,13 +15,13 @@ During any investment, VCs and angel investors usually demand “special treatme
 
 **TABLE OF CONTENTS**
 
-1. Why are Anti-Dilution Provisions important
+1. Why are Anti-Dilution Provisions Important
 2. Types of Anti-Dilution Provisions
-3. Broad-based vs. Narrow-based formula (and which one is better for founders)
-4. How to use Anti-Dilution Provisions in Ledgy
+3. Broad-based vs. Narrow-based Formula (and Which One is Better for Founders)
+4. How to Use Anti-Dilution Provisions in Ledgy
 
 
-##### 1. WHY ARE ANTI-DILUTION PROVISIONS IMPORTANT?
+##### 1. Why Are Anti-Dilution Provisions Important?
 
 
 Investment rounds ideally increase the valuation of the company, meaning the pre-money valuation for each subsequent round is higher than the previous round. More rounds equals more investors, which means more people have to share the same pie. As long as the valuation of the company rises, investors usually don’t mind the decrease in ownership, because the increase in valuation raises the value of the stock they’re holding.
@@ -40,12 +40,12 @@ Here’s an example of why investors want protection in the term sheet:
 Another and often times more important reason why dilution matters to investors, is in the **voting power and control of the company**. In most cases, control and voting power are tied to the amount and type of shares held by a given shareholder. Investors and even founders can find themselves outnumbered if their ownership in the company is diluted.
 To prevent this from happening, investors like to negotiate a clause called “Anti-Dilution Provisions”
 
-##### 2. TYPES OF ANTI-DILUTION PROVISIONS
+##### 2. Types of Anti-Dilution Provisions
 
 Besides anti-dilution provisions, a term-sheet includes concepts such as conversion rights, participating preferred stock, liquidation preference, etc. We’ll get into that later, for now, it’s important to know that investor’s usually negotiate **preferred stock** for themselves and it can **convert** to common stock via **conversion price**. In the beginning, the conversion price equals the price per share from their round (invested 1M€, price per share 1€, investor receives 1M shares) but in the event of a down-round, it can change. Anti-dilution provisions protect investors by **adjusting the price at which the investors preferred stock converts into common stock**, effectively increasing the amount of common stock they own.
 The most commonly used types of anti-dilution are full ratchet and weighted average (broad or narrow). The first is better for investors, the second is more founder friendly.
 
-###### FULL RATCHET
+###### Full Ratchet
 
 In the case of a full ratchet anti-dilution, investors get to retain almost the same percentage of your company from before the down-round. For that to be possible, the conversion price for preferred shares in the down-round has to be adjusted.
 
@@ -53,7 +53,7 @@ In the case of a full ratchet anti-dilution, investors get to retain almost the 
 
 Even though many investors seek down-round protection, full ratchet isn’t very common in practice and is only beneficial for the investor.
 
-###### WEIGHTED AVERAGE
+###### Weighted Average
 
 
 The next type is a little different. It’s not meant to recuperate all of early investors losses but rather act as **compensation**. There are two ways of calculating it and are called **“broad-based weighted average”** and **”narrow-based weighted average”**.
@@ -62,19 +62,19 @@ The difference between these two and full ratchet is in how the new conversion p
 
 We are trying to calculate the new price per share that will compensate series A investors. We can expect a new price to be somewhere between the series A price and the price offered in the down-round. In this case between 2€ and 1€, which will result in the series A investor receiving more shares as compensation, for no additional investment.
 
-**EXAMPLE:**
+**Example:**
 
 
 >*Let’s assume a company has 1,000,000 common shares outstanding and in their series A round, the company issues 1,000,000 shares of preferred stock for the price of 2€ per share. The series A preferred stock is convertible to common at a 1:1 ratio and for a conversion price of 2€. Then in series B they issue another 1,000,000 shares at only 1€ per share.*
->*Now comes the time to calculate the new conversion price to compensate series A investor.*
-<Img src="Formula1.png" />
+>*Now comes the time to calculate the new conversion price to compensate the series A investor.*
+<Img src="Formula1.png" size="350" />
 
 
 
 
 
 >*The next step to get the actual amount of common issuable stock that the previous investor will end up with, we have to multiply the number of shares they have from their round with the conversion rate caused by the down-round. The Conversion rate is calculated by dividing the old conversion price with the new conversion price.*
-<Img src="Formula2.png" size="300" />
+<Img src="Formula2.png" size="220" />
 
 
 >*The last step is to multiply the amount of shares series A investor got in series A with the conversion rate. This is now the amount the investor from series A owns.*
@@ -83,13 +83,13 @@ We are trying to calculate the new price per share that will compensate series A
 
 
 
->*The previous investors get compensated for a down-round with additional common shares, in this case 200,000.*
+>*The previous investor gets compensated for a down-round with additional common shares, in this case 200,000.*
 
-##### 3. NO ANTI-DILUTION PROTECTION
+##### 3. No Anti-Dilution Protection
 
 The last possible scenario when negotiating anti-dilution provisions with your investors is one where you don’t put any anti-dilution clauses in the contract at all. This is also known as no-price-based anti-dilution. It means that the investor’s stock is treated the same as common shareholders stock and it undergoes the same rate of dilution in the event of a down-round. From the founders and other common shareholders perspective, this is **the fairest and best option**.
 
-##### 4. BROAD-BASED VS NARROW-BASED FORMULA (and which one is better for founders)
+##### 4. Broad-Based vs Narrow-Based Formula (And Which One Is Better for Founders)
 
 The difference between the two is in how the **“common stock outstanding”** part of the formula is calculated. We can already tell from the name that the broad-based weighted average is going to include a broader range of stock in this variable. **Broad-based** weighted average provision includes:
 - The company’s common stock outstanding (this includes all common stock issuable upon conversion of its preferred stock)
@@ -106,11 +106,13 @@ For those of you, who’d like to test the difference between broad-based and na
 There are a couple of things to consider here but perhaps the most important one has got to do with the survival of the company. If the company lost value but needs additional funds to recover, do investors really want the founders to live in fear of losing a significant amount of ownership? All in all the best option is no anti-dilution protection, but weighted average is still a much better option for founders than full ratchet, while still protecting early investors.
 
 
-##### 5. HOW TO USE ANTI-DILUTION PROVISIONS IN LEDGY?
+##### 5. How to Use Anti-Dilution Provisions in Ledgy?
 
 Here’s how you can include and track anti-dilution provisions with Ledgy. Create or edit a share class and assign it any of the above-mentioned options and click save. Now Ledgy will take this into account whenever you’re preparing for a new round.
 
-<div style="position: relative; padding-bottom: 56.25%; height: 0;"><iframe src="https://www.loom.com/embed/f6fae82a80bc4c37829544cc2237c0fa" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe></div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SRfLd0_7T2k?rel=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<br/>
 
 **Try the [demo](https://demo.ledgy.com) and see for yourself!**
 
