Change colon in title

--- a/src/markdown/blog/anti-dilution-provisions.mdx
+++ b/src/markdown/blog/anti-dilution-provisions.mdx
@@ -1,7 +1,7 @@
 ---
 date: "2019-07-11"
 author: "spela"
-title: "Anti-Dilution Provisions | Which One Is Better for Founders?"
+title: "Anti-Dilution Provisions: Which One Is Better for Founders?"
 description: "During any investment, VCs and angel investors usually demand “special treatment”, reserved just for them."
 coverImage: anti-dilution-provisions/coverImg.jpg
 images:
