--- a/src/markdown/blog/anti-dilution-provisions.mdx
+++ b/src/markdown/blog/anti-dilution-provisions.mdx
@@ -13,9 +13,9 @@ images:
 
 During any investment, VCs and angel investors usually demand “special treatment”, reserved just for them. One of the integral parts of negotiations are provisions that protect investors from experiencing significant amounts of dilution in subsequent financing rounds. As important as provisions are to investors, they can also have an unfavorable impact on the ownership of founders and employees.
 
-**TABLE OF CONTENTS**
+**Table of Contents**
 
-1. Why are Anti-Dilution Provisions Important
+1. Why Are Anti-Dilution Provisions Important
 2. Types of Anti-Dilution Provisions
 3. Broad-based vs. Narrow-based Formula (and Which One is Better for Founders)
 4. How to Use Anti-Dilution Provisions in Ledgy
@@ -27,14 +27,21 @@ During any investment, VCs and angel investors usually demand “special treatme
 Investment rounds ideally increase the valuation of the company, meaning the pre-money valuation for each subsequent round is higher than the previous round. More rounds equals more investors, which means more people have to share the same pie. As long as the valuation of the company rises, investors usually don’t mind the decrease in ownership, because the increase in valuation raises the value of the stock they’re holding.
 
 
->*If an investor owned 10% of a company valued at 5M€ and after additional financing rounds ends up owning only 5% of a company but it’s now valued at 25M€, the money they invested increased in value from 500,000€ to 1,250,000€.*
+>*If an investor owned 10% of a company valued at €5m and after additional financing rounds ends up owning only 5% of a company but it’s now valued at €25m, the money they invested increased in value from 500,000€ to 1,250,000€.*
 
 
 But in the event that the company raises additional funds at a lower valuation than in the previous round, investors like to be protected.
 Here’s an example of why investors want protection in the term sheet:
 
 
->*If you close a series A round of 1M€ at a pre-money valuation of 7M€, the post-money valuation will be 8M€. Now the investor owns 12,5% (1M/8M) of the company shares. If you raise a second round of 3M€ but can only get pre-money valuation of 6M€, the first investor essentially lost 25% of the original investment (8M - 6M = 2M, 2M / 8M => 25%).*
+>*If you close a series A round of €1m at a pre-money valuation of €7m, the post-money valuation will be €8m. Now the investor owns 12,5% (€1m/€8m) of the company shares. If you raise a second round of €3m but can only get pre-money valuation of €6m, the first investor essentially lost 25% of the original investment.
+$$
+\text{€8m} - \text{€6m} = \text{€2m}
+$$
+$$
+\frac{\text{€2m}}{\text{€8m}} = 0,25
+$$
+
 
 
 Another and often times more important reason why dilution matters to investors, is in the **voting power and control of the company**. In most cases, control and voting power are tied to the amount and type of shares held by a given shareholder. Investors and even founders can find themselves outnumbered if their ownership in the company is diluted.
@@ -42,7 +49,7 @@ To prevent this from happening, investors like to negotiate a clause called “A
 
 ##### 2. Types of Anti-Dilution Provisions
 
-Besides anti-dilution provisions, a term-sheet includes concepts such as conversion rights, participating preferred stock, liquidation preference, etc. We’ll get into that later, for now, it’s important to know that investor’s usually negotiate **preferred stock** for themselves and it can **convert** to common stock via **conversion price**. In the beginning, the conversion price equals the price per share from their round (invested 1M€, price per share 1€, investor receives 1M shares) but in the event of a down-round, it can change. Anti-dilution provisions protect investors by **adjusting the price at which the investors preferred stock converts into common stock**, effectively increasing the amount of common stock they own.
+Besides anti-dilution provisions, a term-sheet includes concepts such as conversion rights, participating preferred stock, liquidation preference, etc. We’ll get into that later, for now, it’s important to know that investor’s usually negotiate **preferred stock** for themselves and it can **convert** to common stock via **conversion price**. In the beginning, the conversion price equals the price per share from their round (invested €1m, price per share 1€, investor receives 1M shares) but in the event of a down-round, it can change. Anti-dilution provisions protect investors by **adjusting the price at which the investors preferred stock converts into common stock**, effectively increasing the amount of common stock they own.
 The most commonly used types of anti-dilution are full ratchet and weighted average (broad or narrow). The first is better for investors, the second is more founder friendly.
 
 ###### Full Ratchet
@@ -56,7 +63,7 @@ Even though many investors seek down-round protection, full ratchet isn’t very
 ###### Weighted Average
 
 
-The next type is a little different. It’s not meant to recuperate all of early investors losses but rather act as **compensation**. There are two ways of calculating it and are called **“broad-based weighted average”** and **”narrow-based weighted average”**.
+The next type is a little different. It’s not meant to recuperate all of early investors losses but rather act as **compensation**. There are two ways of calculating it and are called **“broad-based weighted average”** and **“narrow-based weighted average”**.
 
 The difference between these two and full ratchet is in how the new conversion price is determined. We saw that in the full ratchet situation new conversion price equals the down-round’s conversion price, but here we have to calculate a new conversion price for existing investors. This is done with the same formula for both broad and narrow weighted average. The formula takes into account **how many** and at **what price** were new shares issued, and not just the price.
 
